# Passenger-Flow-Predictor

./: .env.example  .gitignore  LICENSE  README.md  backfill_metar.py  config.py  live_ingest.py  render.yaml
.github/workflows/: ingest.yml  train_model.yml
data-pipeline/: SCHEMA.md  backfill_metar.py  create_refunds_table.py  create_subscriptions_table.py  live_ingest.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  Screen2.jsx  Screen3.jsx  index.css
frontend/src/lib/: api.ts
frontend/src/screens/: home.tsx  screen2.tsx  screen3.tsx  screen4.tsx  screen5.tsx
ml/: .gitignore  README.md  app.py  pyproject.toml  train.py
ml/data/: input.json
ml/models/: calibrator.pkl  calibrator_hi.pkl  calibrator_lo.pkl  feature_cols.json  meta.json
ml/src/: __init__.py  config.py  conformal.py  decision.py  evaluate.py  features.py  ingest.py  model.py  service.py  splits.py
rerouting/: adapter_flixbus.py  adapter_gflights_cached.py  adapter_nearby_flights.py  adapter_train.py  api.py  capture_gflights.py  flights_board.py  flights_db.py  flights_live.py  gflights_cache.json  letsencrypt_intermediates.pem  notifier.py  requirements.txt  resolver.py
