[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "lria-fog-ml"
version     = "0.1.0"
description = "Fog-disruption prediction ML engine for Iași airport (LRIA)"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "requests>=2.32",
    "joblib>=1.4",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "freezegun>=1.2",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length    = 100
target-version = "py312"
